# earthrs-modis

./: CITATION.cff  Cargo.toml  README.md
examples/: lai.rs
src/: lib.rs  structs.rs
